--- a/client/src/component/Chat/Chat.css
+++ b/client/src/component/Chat/Chat.css
@@ -14,18 +14,36 @@
     width: 50%;
 }
 
+.header>h1{
+    color:#fff;
+    margin: 10px;
+}
+
+.closebtn{
+ margin: 10px;
+ transition: all 0.3s;
+ cursor: pointer;
+}
+
+.closebtn:hover{
+    transform: scale(1.2);
+}
+
 .header{
     background-color: blueviolet;
     height: 15%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .chatBox{
-    border: 0.2vmax solid #000;
     height: 70%; 
     box-sizing: border-box;
 }
 
 .inputBox{
+    border-top:2px solid #000;
     height: 15%;
     box-sizing: border-box;
     display: flex;
