--- a/client/src/component/Message/Message.css
+++ b/client/src/component/Message/Message.css
@@ -1,20 +1,22 @@
-.messageBox{
-    background-color:#e9e9e9 ;
-    width: 50%;
-    padding: 1vmax;
-    margin: 1.5vmax;
-    border-radius: 10px;
-    display:inline-block;
-    clear:both;
+.messageBox {
+  /* width: 1vmax; */
+  padding: 1vmax;
+  margin: 1vmax;
+  border-radius: 10px;
+  display: inline-block;
+  font-size: 1.2vmax;
+  clear: both;
 }
 
-.right{
-    background-color: blueviolet;
-    float:right;
-    color: #ffff;
+.right {
+  text-align: right;
+  background-color: rgb(255, 77, 12);
+  float: right;
+  color: #ffff;
 }
 
-.left{
-    float: left;
-    background-color: chartreuse;
+.left {
+  text-align: left;
+  float: left;
+  background-color: chartreuse;
 }
